--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!--
 Author: W3layouts
 Author URL: http://w3layouts.com
@@ -46,7 +45,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<h1><a class="navbar-brand" href="index.html">Events</a></h1>
+						<h1><a class="navbar-brand" href="index.html">AADC House of Bridal</a></h1>
 					</div> 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -55,7 +54,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li class="hidden"><a class="page-scroll" href="#page-top"></a>	</li>
 							<li><a class="hvr-sweep-to-right" href="index.html">Home</a></li>
 							<li><a class="hvr-sweep-to-right" href="about.html">About Us</a></li>
-					<!--		<li><a class="hvr-sweep-to-right" href="events.html">Events</a></li> -->
+					<!--	<li><a class="hvr-sweep-to-right" href="events.html">Events</a></li> -->
 							<li class="dropdown" id="custom-dropdown">
 									<a href="#" class="dropdown-toggle hvr-sweep-to-right" data-hover="Pages" data-toggle="dropdown">Our Services <b class="caret"></b></a>
 									<ul class="dropdown-menu">
@@ -101,190 +100,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</div>
 	<!-- //about -->
 	<!-- offers -->
-	<div class="offers">
-		<div class="container">
-						<h2 class="heading-agileinfo">Gallery<span>Events is a professionally managed Event</span></h2>
-			<div class="gallery-grids">
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g1.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>	
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g2.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>	
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g3.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>		
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g4.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>	
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g5.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g5.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>	
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g6.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>		
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g7.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g7.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>	
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g8.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g8.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>	
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="col-md-4 gallery-grid">
-						<div class="grid">
-							<figure class="effect-apollo">
-								<a class="example-image-link" href="images/g9.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-									<img src="images/g9.jpg" alt="" />
-									<figcaption>
-										<p>Proin vitae luctus dui, sit amet ultricies leo</p>
-									</figcaption>		
-								</a>
-							</figure>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
-					<script src="js/lightbox-plus-jquery.min.js"> </script>
-			</div>
-		</div>
-		</div>
-	</div>
-	<!-- offers -->
-		<!-- about-team -->
-	<div class="team">		
-		<div class="container">
-			<h3 class="heading-agileinfo">Our Team<span>Events is a professionally managed Event</span></h3>			
-			<div class="team-row-agileinfo">
-				<div class="col-md-3 col-xs-6 team-grids">
-					<div class="thumbnail team-agileits">
-						<img src="images/t2.jpg" class="img-responsive" alt=""/>
-						<div class="w3agile-caption ">
-							<h4>Vaura Tegsner</h4>
-							<p>Lorem</p>
-							<div class="social-icon social-w3lsicon">
-								<a href="#" class="social-button twit"><i class="fa fa-twitter"></i></a>
-								<a href="#" class="social-button fb"><i class="fa fa-facebook"></i></a> 
-								<a href="#" class="social-button in"><i class="fa fa-linkedin"></i></a>  
-							</div>	
-						</div> 
-					</div>
-				</div>
-				<div class="col-md-3 col-xs-6 team-grids">
-					<div class="thumbnail team-agileits">
-						<img src="images/t1.jpg" class="img-responsive" alt=""/>
-						<div class="w3agile-caption">
-							<h4>Jark Kohnson</h4>
-							<p>Lorem</p>
-							<div class="social-icon social-w3lsicon">
-								<a href="#" class="social-button twit"><i class="fa fa-twitter"></i></a>
-								<a href="#" class="social-button fb"><i class="fa fa-facebook"></i></a> 
-								<a href="#" class="social-button in"><i class="fa fa-linkedin"></i></a>  
-							</div>	
-						</div> 
-					</div>
-				</div>
-				<div class="col-md-3 col-xs-6 team-grids">
-					<div class="thumbnail team-agileits">
-						<img src="images/t3.jpg" class="img-responsive" alt=""/>
-						<div class="w3agile-caption">
-							<h4>Chunk Erson</h4>
-							<p>Lorem</p>				
-							<div class="social-icon social-w3lsicon">
-								<a href="#" class="social-button twit"><i class="fa fa-twitter"></i></a>
-								<a href="#" class="social-button fb"><i class="fa fa-facebook"></i></a> 
-								<a href="#" class="social-button in"><i class="fa fa-linkedin"></i></a>  
-							</div>	
-						</div> 
-					</div>
-				</div>
-				<div class="col-md-3 col-xs-6 team-grids">
-					<div class="thumbnail team-agileits">
-						<img src="images/t4.jpg" class="img-responsive" alt=""/>
-						<div class="w3agile-caption">
-							<h4>Goes Mehak</h4>
-							<p>Lorem</p>						
-							<div class="social-icon social-w3lsicon">
-								<a href="#" class="social-button twit"><i class="fa fa-twitter"></i></a>
-								<a href="#" class="social-button fb"><i class="fa fa-facebook"></i></a> 
-								<a href="#" class="social-button in"><i class="fa fa-linkedin"></i></a>  
-							</div>	
-						</div> 
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
-	</div>
+	
 	<!-- //about-team -->
 <!-- about -->
 <!-- footer-top -->	
