--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<h1><a class="navbar-brand" href="index.html">Events</a></h1>
+						<h1><a class="navbar-brand" href="index.html">AADC House of Bridal</a></h1>
 					</div> 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -55,7 +55,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li class="hidden"><a class="page-scroll" href="#page-top"></a>	</li>
 							<li><a class="hvr-sweep-to-right" href="index.html">Home</a></li>
 							<li><a class="hvr-sweep-to-right" href="about.html">About Us</a></li>
-					<!--		<li><a class="hvr-sweep-to-right" href="events.html">Events</a></li> -->
+					<!--	<li><a class="hvr-sweep-to-right" href="events.html">Events</a></li> -->
 							<li class="dropdown" id="custom-dropdown">
 									<a href="#" class="dropdown-toggle hvr-sweep-to-right" data-hover="Pages" data-toggle="dropdown">Our Services <b class="caret"></b></a>
 									<ul class="dropdown-menu">
@@ -83,7 +83,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="container">
 	<h2 class="heading-agileinfo">Contact<span>Events is a professionally managed Event</span></h2>
 		<div class="map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3539.812628729253!2d153.014155!3d-27.4750921!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915a0835840a2f%3A0xdd5e3f5c208dc0e1!2sMelbourne+St%2C+South+Brisbane+QLD+4101%2C+Australia!5e0!3m2!1sen!2sin!4v1492257477691"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.8773709107086!2d106.98450655026545!3d-6.258733555530268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNsKwMTUnMzEuNSJTIDEwNsKwNTknMDQuNyJF!5e0!3m2!1sen!2sid!4v1614655677714!5m2!1sen!2sid"></iframe>
 		</div>
 		<div class="col-md-6 contact-form">
 				<h4 class="white-w3ls">Contact Form</h4>
@@ -117,21 +117,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="wthree_footer_grid_left">
 						<i class="fa fa-map-marker" aria-hidden="true"></i>
 					</div>
-					<p>3481 Melrose Place, Beverly Hills, <span>New York City 90210.</span></p>
+					<p><a href="https://goo.gl/maps/rjXu96H5rcqn1c729" target="_blank">Jl. Darut Taqwa No.33a, RT.001/RW.026, Pekayon Jaya, Kec. Bekasi Selatan, Kota Bekasi, Jawa Barat 17148</a></p>
 				</div>
 				<div class="w3ls_footer_grid_left">
 					<div class="wthree_footer_grid_left">
 						<i class="fa fa-phone" aria-hidden="true"></i>
 					</div>
-					<p>+(000) 123 4565 32 <span>+(010) 123 4565 35</span></p>
+					<p><a href="https://wa.me/081398719872" target="_blank">Whatsapp : 0813-9871-9872</a></p>
+					<p><a href="tel:081398719872" target="_blank">Telpon : 0813-9871-9872</a></p>
 				</div>
-				<div class="w3ls_footer_grid_left">
+<!--				<div class="w3ls_footer_grid_left">
 					<div class="wthree_footer_grid_left">
 						<i class="fa fa-envelope-o" aria-hidden="true"></i>
 					</div>
 					<p><a href="mailto:info@example.com">info@example1.com</a> 
 						<span><a href="mailto:info@example.com">info@example2.com</a></span></p>
-				</div>
+				</div> -->
 			</div>
 			<div class="clearfix"> </div>
 	</div>
