--- a/events.html
+++ b/events.html
@@ -87,11 +87,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-md-4 popular-grid">
 						<img src="images/g7.jpg" class="img-responsive" alt=""/>
 						<div class="popular-text">
-							<h5><a href="#" data-toggle="modal" data-target="#myModal2">Birthday 2017</a></h5>
+							<h5><a href="#" data-toggle="modal" data-target="#myModal">Weddings</a></h5>
 							<div class="detail-bottom">
 								<ul>
-									<li><i class="fa fa-calendar" aria-hidden="true"></i>30 May</li>
-									<li><i class="fa fa-map-marker" aria-hidden="true"></i>LONDON, UK</li>
+									<li><i class="fa fa-calendar" aria-hidden="true"></i>15 June</li>
+									<li><i class="fa fa-map-marker" aria-hidden="true"></i>BERLIN, GERMANY</li>
 								</ul>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore sed do eiusmod tempor incididunt ut labore</p>
 							</div>
@@ -250,18 +250,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 					<div class="modal-body">
 						<img src="images/g8.jpg" alt=" " class="img-responsive" />
-						<p>Ut enim ad minima veniam, quis nostrum 
-							exercitationem ullam corporis suscipit laboriosam, 
-							nisi ut aliquid ex ea commodi consequatur? Quis autem 
-							vel eum iure reprehenderit qui in ea voluptate velit 
-							esse quam nihil molestiae consequatur, vel illum qui 
-							dolorem eum fugiat quo voluptas nulla pariatur.
+						<p>Paket Rumah A
 							<i>" Quis autem vel eum iure reprehenderit qui in ea voluptate velit 
 								esse quam nihil molestiae consequatur.</i></p>
 					</div>
 			</div>
 		</div>
 	</div>
+	
 <!-- //bootstrap-modal-pop-up --> 
 <a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 
