--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<h1><a class="navbar-brand" href="index.html">Events</a></h1>
+						<h1><a class="navbar-brand" href="index.html">AADC House of Bridal</a></h1>
 					</div> 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<li class="hidden"><a class="page-scroll" href="#page-top"></a>	</li>
 							<li><a class="hvr-sweep-to-right" href="index.html">Home</a></li>
 							<li><a class="hvr-sweep-to-right" href="about.html">About Us</a></li>
-					<!--		<li><a class="hvr-sweep-to-right" href="events.html">Events</a></li> -->
+					<!--	<li><a class="hvr-sweep-to-right" href="events.html">Events</a></li> -->
 							<li class="dropdown" id="custom-dropdown">
 									<a href="#" class="dropdown-toggle hvr-sweep-to-right" data-hover="Pages" data-toggle="dropdown">Our Services <b class="caret"></b></a>
 									<ul class="dropdown-menu">
